<resources>
  <string name="rule_edit" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
  <string name="application_name" translatable="false">GNCC Home</string>
  <string name="refresh">REFRESH</string>
  <string name="cancel">CANCEL</string>
  <string name="cancel_normal">Cancel</string>
  <string name="inbox">Inbox</string>
  <string name="settings">Settings</string>
  <string name="next">Next</string>
  <string name="next_upper">NEXT</string>
  <string name="update">UPDATE</string>
  <string name="continue_upper">CONTINUE</string>
  <string name="ssid">SSID</string>
  <string name="password">Password</string>
  <string name="show">SHOW</string>
  <string name="hide">HIDE</string>
  <string name="save">SAVE</string>
  <string name="high">HIGH</string>
  <string name="normal">NORMAL</string>
  <string name="copy">COPY</string>
  <string name="logout">LOG OUT</string>
  <string name="sign_out">Sign Out</string>
  <string name="close">CLOSE</string>
  <string name="low">LOW</string>
  <string name="medium">MEDIUM</string>
  <string name="accept">ACCEPT</string>
  <string name="reject">REJECT</string>
  <string name="ignore">IGNORE</string>
  <string name="live">Live</string>
  <string name="subscribe_upper">SUBSCRIBE</string>
  <string name="submit">Submit</string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="cache_cleared">Clear Cache.</string>
  <string name="mon_upper">M</string>
  <string name="tues_upper">T</string>
  <string name="wed_upper">W</string>
  <string name="thur_upper">T</string>
  <string name="fri_upper">F</string>
  <string name="sat_upper">S</string>
  <string name="sun_upper">S</string>
  <string name="change_upper">CHANGE</string>
  <string name="edit">EDIT</string>
  <string name="confirm">Confirm</string>
  <string name="confirm_upper">CONFIRM</string>
  <string name="complete">Complete</string>
  <string name="settings_delete">DELETE</string>
  <string name="ok">OK</string>
  <string name="select_image">Select Image</string>
  <string name="take_photo">TAKE A PHOTO</string>
  <string name="album">ALBUM</string>
  <string name="camera">Camera</string>
  <string name="offline">Offline</string>
  <string name="online">Online</string>
  <string name="copy_finish_tip">Device ID has been copied</string>
  <string name="view">VIEW</string>
  <string name="empty">Empty</string>
  <string name="success">Successful</string>
  <string name="no_record">Make sure loop recording is on and the first file is done to playback.(First file will be ready after camera boot up 5 mintues or after format micro SD card done 5 mintues).</string>
  <string name="seek_no_record">%1$s No recording found.</string>
  <string name="AM">AM</string>
  <string name="PM">PM</string>
  <string name="unknown">Unknown</string>
  <string name="upgrade_success">Upgrade successful.</string>
  <string name="phone_number_email">Email</string>
  <string name="kick_out">Force Logout</string>
  <string name="kick_out_info">Your account has been logged in on another device.</string>
  <string name="login_expire">Login Expired</string>
  <string name="login_expire_info">Your account hasn\'t been active, Please log in again.</string>
  <string name="account_move">Update Account</string>
  <string name="account_move_info">Account information has expired, please log in again.</string>
  <string name="network_error0">Network error. Please try again later.</string>
  <string name="unable_to_parse_response">Server error. Please try again later.</string>
  <string name="acc_illegal">That account does not exsit. Please sign up or use a different account.</string>
  <string name="wi_fi_illegal">Wi-Fi error, please try again later.</string>
  <string name="wi_fi_connect_error0">Wi-Fi connection error, please try again later.</string>
  <string name="wi_fi_psd_illegal">Wi-Fi password incorrect, please try again later.</string>
  <string name="msg_system_type">System Messages</string>
  <string name="exit_app_tip">Press again to exit.</string>
  <string name="repeat_click_btn_soon">The operation is too frequent, please try again later</string>
  <string name="share_dialog_title">Device Sharing</string>
  <string name="share_dialog_content">%1$s would like to share access to camera %2$s with you.</string>
  <string name="share_dialog_content_cancel">%1$s removed your access to %2$s with you.</string>
  <string name="share_dialog_content_remove">%1$s removed access to %2$s</string>
  <string name="share_dialog_content_reject">%1$s rejected your shared access to %2$s</string>
  <string name="share_dialog_content_agree">%1$s accepted your shared access to %2$s</string>
  <string name="share_device_sub_message">%1$s has successfully been added to your account.</string>
  <string name="get_fail">Failed.</string>
  <string name="request">REQUEST</string>
  <string name="request_rationale_ask">This app may not work properly without the requested permissions.</string>
  <string name="request_rationale_ask_again">
        This app may not work properly without the requested permissions.
        Please give your permissions in the app settings to avoid errors.
        Permission required to proceed. Please go to app settings and provide your permission.
    </string>
  <string name="request_title">Permissions Required</string>
  <string name="not_support">does not support</string>
  <string name="subscribe">Subscribe</string>
  <string name="unsubscribe">Unsubscribe</string>
  <string name="unsubscribe_up_case">UNSUBSCRIBE</string>
  <string name="carry_on">Carry on</string>
  <string name="rename_empty">Custom name can\'t be empty</string>
  <string name="splash_app_name">GNCC Home</string>
  <string name="splash_get_started">Family Care and Home Guard</string>
  <string name="splash_auto_login_fail">Failed to log in.</string>
  <string name="splash_copy_right">Copyright © 2021 OSAIO all rights reserved.</string>
  <string name="create_account">Create Account</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_up">Sign Up</string>
  <string name="sign_in_forget_pwd">Forgot password</string>
  <string name="sign_in_account_hint">Email</string>
  <string name="sign_in_create_account">Create Your Account</string>
  <string name="sign_in_account_or_password_empty">Password/Account can not be blank.</string>
  <string name="sign_in_camera_permission_request_warning">GNCC Home is not authorized to use your camera.Please allow access to GNCC Home in \"Settings.\"</string>
  <string name="sign_in_account_empty">Account can not be blank.</string>
  <string name="sign_in_password_empty">Password can not be blank.</string>
  <string name="sign_in_account_not_exist">The user does not exist.</string>
  <string name="sign_in_password_incorrect">Email address or password is incorrect</string>
  <string name="sign_in_verify_code_incorrect">Verification code is incorrect</string>
  <string name="sign_in_submit">Submit</string>
  <string name="sign_in_send">Send</string>
  <string name="sign_in_resend">Resend</string>
  <string name="sign_in_third_login_tip">Sign in with your social media account</string>
  <string name="sign_in_country_title">Country</string>
  <string name="sign_up_create_account_tip">I confirm that I am at least 13 years old and agree to GNCC\'s %1$s and %2$s.</string>
  <string name="sign_up_already_have_account">Already have an account? %1$s</string>
  <string name="sign_up_tip_check_user_privacy">Please review and agree to GNCC Home\'s Privacy Policy.</string>
  <string name="sign_up_tip_email">Please use an email address to register.</string>
  <string name="sign_up_get_verification_code">Get Verification Code</string>
  <string name="sign_up_account_exist">The user already exists.</string>
  <string name="sign_up_dialog_tip_account_exist_content">The account already exists. Please login.\nPowered by Victure Home.</string>
  <string name="input_verify_code_title">Account Verification</string>
  <string name="input_verify_code_enter_code">Verification code</string>
  <string name="input_verify_code_send">A verification code has been sent to:</string>
  <string name="input_verify_reset_code_send">The verification code has been sent to:</string>
  <string name="input_verify_resend_verification_code">If you haven\'t received the verification code within 3 minutes, please click %1$s.</string>
  <string name="input_verify_resend_reset_code">If you haven\'t received the reset code within 3 minutes, please click %1$s.</string>
  <string name="input_verify_resend">RESEND</string>
  <string name="input_verify_please_enter_code">Please enter verification code.</string>
  <string name="input_verify_code_sended">Verification code has been sent.</string>
  <string name="input_reset_code_sended">The verification code was sent successfully.</string>
  <string name="set_psd_title">Set a new password</string>
  <string name="set_psd_reset_title">Reset password</string>
  <string name="set_psd_enter_pwd">Password</string>
  <string name="set_psd_enter_new_pwd">Create password</string>
  <string name="set_psd_confirm_pwd">Confirm password</string>
  <string name="set_psd_save_and_sign_in">Save login</string>
  <string name="two_auth_login_title">Two-Factor Authentication</string>
  <string name="two_auth_login_tip">An authentication code has been sent to:\n%1$s</string>
  <string name="two_auth_detail_tip">Turn this feature on to better protect your camera’s security, Verify and trust your phone by typing in a secondary code sent to your account email.</string>
  <string name="two_auth_detail_name_label">Current Device</string>
  <string name="two_auth_detail_device_trust_list_label">Trusted Device</string>
  <string name="two_auth_device_title">Device Info</string>
  <string name="two_auth_device_last_activity_time_label">Last Activity</string>
  <string name="two_auth_device_remove_from_account">Remove From Account</string>
  <string name="w_monday">Monday</string>
  <string name="w_tuesday">Tuesday</string>
  <string name="w_wednesday">Wednesday</string>
  <string name="w_thursday">Thursday</string>
  <string name="w_friday">Friday</string>
  <string name="w_saturday">Saturday</string>
  <string name="w_sunday">Sunday</string>
  <string name="weekdays">Weekdays</string>
  <string name="weekends">Weekends</string>
  <string name="every_day">Every day</string>
  <string name="living_video_no_device">No device/camera found.</string>
  <string name="living_no_open">DON\'T OPEN</string>
  <string name="living_open">OPEN</string>
  <string name="living_open_capture_file">Open the capture file?</string>
  <string name="living_file_save_to_album">Video saved to photos.</string>
  <string name="living_photo_file_save_to_album">Screenshot saved.</string>
  <string name="device_guide_next">NEXT</string>
  <string name="device_guide_done">Done</string>
  <string name="camera_share_account">Account</string>
  <string name="account_profile_photo">Change Profile Picture</string>
  <string name="account_change_password">Change Password</string>
  <string name="account_password_limit_num">Password must be 6-12 digits</string>
  <string name="first_start_instruction_title">Terms and Privacy Notice</string>
  <string name="first_start_instruction_tip">
        We attach great importance to the protection of your personal information and privacy. In order to better protect your personal rights and interests, please carefully read the %1$s and %2$s before using our products, and ensure that you are over 13 years old.\n\n
        If you choose not to agree, you will not be able to use our products and services.
    </string>
  <string name="first_start_instruction_agree">Understood</string>
  <string name="router_user_name">User Name</string>
  <string name="key_mine_NewPassword">New Password</string>
</resources>