<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home">

    <TextView
        android:id="@+id/tvPrivacyTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_65"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/first_start_instruction_title"
        android:textColor="@color/theme_text_color"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/first_start_instruction_tip"
        android:textColor="@color/theme_text_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@id/btnPrivacyAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyTitle" />

    <Button
        android:id="@+id/btnPrivacyAgree"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_42"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_80"
        android:background="@drawable/button_blue_gray_state_list_round"
        android:text="@string/first_start_instruction_agree"
        android:textColor="@color/theme_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnPrivacyReject"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_50"
        android:gravity="center"
        android:minHeight="@dimen/dp_42"
        android:textSize="@dimen/sp_13"
        android:text="If you choose not to agree, you will not be able to use our products and services"
        android:textColor="@color/theme_subtext_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPrivacyAgree" />

</androidx.constraintlayout.widget.ConstraintLayout>
