<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue">

    <ScrollView
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.apemans.quickui.editbox.SmartEditBox
                android:id="@+id/ipvOldPsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_50"
                android:paddingLeft="@dimen/dp_50"
                android:visibility="gone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:gravity="center|start"
                app:button_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="old Password" />

            <com.apemans.quickui.editbox.SmartEditBox
                android:id="@+id/ipvCreatePsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_50"
                android:paddingLeft="@dimen/dp_50"
                android:inputType="textPassword"
                android:singleLine="true"
                android:gravity="center|start"
                app:button_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ipvOldPsd"
                app:title="@string/key_mine_NewPassword"/>

            <com.apemans.quickui.editbox.SmartEditBox
                android:id="@+id/ipvConfirmPsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_50"
                android:paddingLeft="@dimen/dp_50"
                android:inputType="textPassword"
                android:singleLine="true"
                android:gravity="center|start"
                app:button_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ipvCreatePsd"
                app:title="@string/set_psd_confirm_pwd"/>

            <!--android:text="@string/account_password_limit_num"-->
            <TextView
                android:id="@+id/tvPassworTip"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_75"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_75"
                android:text="@string/account_password_limit_num"
                android:textColor="@color/gray_white"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ipvConfirmPsd" />

            <ImageView
                android:id="@+id/ivSignUpLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_button_loading"
                android:translationZ="@dimen/dp_6"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnDone"
                app:layout_constraintEnd_toEndOf="@+id/btnDone"
                app:layout_constraintStart_toStartOf="@+id/btnDone"
                app:layout_constraintTop_toTopOf="@+id/btnDone" />

            <!--android:text="@string/sign_up"
            app:eventId="@string/n_event_id_click_save_and_login_in_register"-->
            <Button
                android:id="@+id/btnDone"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_42"
                android:layout_marginStart="@dimen/dp_75"
                android:layout_marginTop="@dimen/dp_85"
                android:layout_marginEnd="@dimen/dp_75"
                android:background="@drawable/button_white_gray_state_list_round"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassworTip" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
