<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/managerAccountRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_layout"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@drawable/bg_select_photo"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:textColor="@color/theme_text_color"
                android:gravity="center_vertical"
                android:text="@string/account_profile_photo" />

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </LinearLayout>

        <View
            style="@style/divider_thin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/theme_text_color"
                android:text="@string/camera_share_account" />

            <TextView
                android:id="@+id/userAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/camera_share_account"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <View
            style="@style/divider_thin"/>

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_weight="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/theme_text_color"
                android:text="@string/router_user_name" />

            <TextView
                android:id="@+id/userNickName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:layout_marginRight="5dp"
                android:text="@string/router_user_name"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlCompat" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/right_arrow_disable"/>

        </LinearLayout>

        <View
            style="@style/divider_thin"/>

        <LinearLayout
            android:id="@+id/updata_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/theme_text_color"
                android:text="@string/account_change_password" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/right_arrow_disable"/>

        </LinearLayout>

        <View
            style="@style/divider_thin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/theme_text_color"
                android:text="手机号码" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="--"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <View
            style="@style/divider_thin"/>

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/button_blue_gray_state_list_round"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>